# CS251-IITB-Software-and-Systems-Lab

./: README.md
inlab1-Bash/: 180050050-lab1-inlab.script
inlab2-Sed Awk Regex/: references.txt
inlab2-Sed Awk Regex/Task1/: q1.sed
inlab2-Sed Awk Regex/Task2/: q2.awk
inlab2-Sed Awk Regex/Task3/: q3.sh
inlab2-Sed Awk Regex/Task4/: q4.sh
inlab3-Python/: Q1.py  Q2.py  Q3.py  Q4.py  Q5.py
inlab3-Python/Data/: Heroes.txt  Q2.py
inlab4-Numpy Scipy matplotlib/: autograder.py  inlab4_tasks.py  task0.py  utils.py
inlab4-Numpy Scipy matplotlib/testcases/: task2.pkl  task5.pkl
inlab7- sqlite3/: clean.py  create_tables.py  group.py  insert.py  join.py  pokemon.csv  rank.py  update.py
inlab8-Java/: clock.java  cmd_input.java  console_input.java  search.java  substrings.java  welcome.java
outlab2-Sed Awk Regex/outlab2-Chaos_club/: references.txt
outlab3-Python/: MyDiary.txt
outlab3-Python/outlab3-Chaos_club/: Q1.py  Q2.py  Q3.py  Q4.py  Q5.py  references.txt
outlab5-Git Make Latex/outlab5-Chaos_club/q6/: CMakeLists.txt  rawmake
outlab5-Git Make Latex/outlab5-Chaos_club/q6/mygame/: CMakeLists.txt
outlab7- sqlite3/Chaos_club-outlab7/: average_balls.py  average_runs.py  create_tables.py  hitman.py  insert.py  prep_stmt.py  sql_injection.py  trueorfalse.txt  win_chance.py
outlab8-Java/Chaos_club-outlab8/: BasicClient.java  BasicServer.java  FetchAndProcess.java  FetchAndProcessFromDisk.java  FetchAndProcessFromNetwork.java  FetchAndProcessFromNetworkFast.java  MultiServer.java
outlab8-Java/task3-v2/task3/: Main.java  (+4 more)
outlab9-Android App/: planner.apk
(+138 files in other folders)
